kubernetes/ingress/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: ingress
  annotations:
    # AGIC Annotations (Azure specific)
    kubernetes.io/ingress.class: azure/application-gateway

spec:

  rules:
    # FRONTEND ROUTING
    - host: chat.example.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
